--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="hint_enter_a_message">Type here...</string>
 
     <string name="username">f6946a7a-6215-43b2-a1c6-c6d6fa151027</string>
-    <string name="password"> Cj5rBYYVUgld</string>
+    <string name="password">Cj5rBYYVUgld</string>
     <string name="workspace_id">1f5a3c51-d7af-47ed-841a-ef9dbf749f02</string>
 
     <string name="negative_reponse">I didn\'t understand. You can try rephrasing.</string>
@@ -27,18 +27,18 @@
     <string name="reddit">Reddit</string>
     <string name="connect_to_internet">Please connect to the Internet</string>
     <string name="wait_morty">Please wait for Morty\'s response</string>
-    <string name="morty_who">Who\'s Morty?</string>
-    <string name="morty_who_reply_1">Morty is a Rule-based/Deep learning chatbot hybrid...</string>
+    <string name="morty_who">Who are you?</string>
+    <string name="morty_who_reply_1">I\'m a Rule-based/Deep learning chatbot hybrid…</string>
     <string name="morty_who_reply_2">WAIT WAIT WAIT. English please.</string>
-    <string name="morty_who_reply_3">Basically, it\'s a bot that helps highschool students get to know more about FINKI.</string>
-    <string name="morty_how">How does he work?</string>
-    <string name="morty_how_reply_1">Well, 2 engines work in the background: \n\- One that answers questions about FINKI\;\n\- Another that answers anything else.</string>
-    <string name="morty_how_reply_2">So he knows the secrets to the Universe?</string>
-    <string name="winks_at_morty_definitely_not">*winks at Morty* Definitely not.</string>
-    <string name="morty_aware">What should you be aware of?</string>
-    <string name="morty_aware_reply_1">If you are someone that\'s easily offended, it\'s highly advised that you censor Morty.</string>
+    <string name="morty_who_reply_3">Basically, I help high school students to get to know FINKI better, but I also have general knowledge of diverse areas.</string>
+    <string name="morty_how">How do you work?</string>
+    <string name="morty_how_reply_1">Well, 2 engines work in my brain:\n\- One that answers questions about FINKI, which is quite easy for me\;\n\- And another that answers anything else, which can be pretty nagging.</string>
+    <string name="morty_how_reply_2">So you know the secrets to the Universe?</string>
+    <string name="winks_at_morty_definitely_not">Definitely not. *code red, they\'re onto us*</string>
+    <string name="morty_aware">What should I be aware of?</string>
+    <string name="morty_aware_reply_1">If you are someone that\'s easily offended, it\'s highly advised that you censor me.</string>
     <string name="morty_aware_reply_2">But why?</string>
-    <string name="morty_aware_reply_3">He comes up with some pretty stupid stuff.\nTrust me.</string>
+    <string name="morty_aware_reply_3">I come up with some pretty stupid stuff.\nTrust me.</string>
     <string name="creator_who">Who made the app?</string>
     <string name="creator_who_reply_1">A FINKI student.</string>
     <string name="creator_who_reply_2">Really? *sarcasm intensifies*</string>
